--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -26,7 +26,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:text="Kleine."/>
+        android:text="DECORHOME."/>
 
 
         <TextView
@@ -38,7 +38,7 @@
             app:layout_constraintTop_toBottomOf="@id/tvAppName"
             app:layout_constraintStart_toStartOf="@id/tvAppName"
             app:layout_constraintEnd_toEndOf="@id/tvAppName"
-            android:text="Let's Register"
+            android:text="Создайте аккаунт"
             android:textAlignment="center"
             android:gravity="center"
             android:textSize="35sp"
@@ -54,7 +54,7 @@
             app:layout_constraintEnd_toEndOf="@id/tvLetsRegister"
             android:textAlignment="center"
             android:gravity="center"
-            android:text="Do you have an account? log in"
+            android:text="Уже есть аккаунт? Войдите"
             />
 
         <EditText
@@ -65,7 +65,7 @@
             app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
             app:layout_constraintTop_toBottomOf="@id/tvDoYouHaveAccount"
             style="@style/editText"
-            android:hint="First Name"
+            android:hint="Имя"
             android:layout_marginTop="50dp"/>
 
         <EditText
@@ -76,7 +76,7 @@
             app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
             app:layout_constraintTop_toBottomOf="@id/edFirstNameRegister"
             style="@style/editText"
-            android:hint="Last name"
+            android:hint="Фамилия"
             android:layout_marginTop="10dp"/>
 
         <EditText
@@ -87,7 +87,7 @@
             app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
             app:layout_constraintTop_toBottomOf="@id/edLastNameRegister"
             style="@style/editText"
-            android:hint="Email"
+            android:hint="Почта"
             android:inputType="textEmailAddress"
             android:layout_marginTop="10dp"/>
 
@@ -99,7 +99,7 @@
             app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
             app:layout_constraintTop_toBottomOf="@id/edEmailRegister"
             style="@style/editText"
-            android:hint="Password"
+            android:hint="Пароль"
             android:inputType="textPassword"
             android:layout_marginTop="10dp"/>
 
@@ -112,7 +112,7 @@
             app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
             app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
             android:layout_marginTop="15dp"
-            android:text="Register"
+            android:text="Зарегистрироваться"
             app:spinning_bar_color="@color/white"/>
 
         <ImageView
