--- a/app/src/main/res/layout/fragment_account_options.xml
+++ b/app/src/main/res/layout/fragment_account_options.xml
@@ -27,7 +27,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:text="Kleine."/>
+            android:text="DECORETIME."/>
 
         <TextView
             android:id="@+id/tvRightAddressForShopping"
@@ -67,14 +67,14 @@
             app:layout_constraintStart_toStartOf="@id/tvQuality"
             app:layout_constraintEnd_toEndOf="@id/tvQuality"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:text="Register"/>
+            android:text="Регистрация"/>
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/buttonLoginAccountOptions"
             style="@style/whiteButtonStyle"
             android:layout_width="@dimen/mediumButtonWidth"
             android:layout_height="@dimen/mediumButtonHeight"
-            android:text="Login"
+            android:text="Войти"
             app:layout_constraintEnd_toEndOf="@id/tvQuality"
             app:layout_constraintStart_toStartOf="@id/tvQuality"
             app:layout_constraintTop_toBottomOf="@+id/buttonRegisterAccountOptions"
