--- a/app/src/main/res/layout/fragment_orders.xml
+++ b/app/src/main/res/layout/fragment_orders.xml
@@ -31,9 +31,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
+                android:layout_marginStart="20dp"
                 android:fontFamily="@font/poppins_light"
-                android:text="All orders"
+                android:text="Все заказы"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
