--- a/app/src/main/res/layout/special_rv_item.xml
+++ b/app/src/main/res/layout/special_rv_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="230dp"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -17,11 +18,10 @@
             android:id="@+id/imageSpecialRvItem"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             android:layout_marginStart="16dp"
             android:layout_marginTop="10dp"
-             />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tvSpecialProductName"
@@ -42,28 +42,32 @@
             android:id="@+id/tvSpecialPrdouctPrice"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:text="$1600"
-            app:layout_constraintStart_toStartOf="@id/tvSpecialProductName"
-            app:layout_constraintTop_toBottomOf="@id/tvSpecialProductName"
+            android:fontFamily="@font/sf_pro_display"
+            android:text="1600₽"
             android:textColor="@color/black"
             android:textSize="12sp"
-            android:fontFamily="@font/sf_pro_display"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.111"
+            app:layout_constraintStart_toStartOf="@id/tvSpecialProductName"
+            app:layout_constraintTop_toBottomOf="@id/tvSpecialProductName" />
 
         <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
             android:id="@+id/btn_add_to_cart"
-            android:layout_width="77dp"
-            android:layout_height="25dp"
+            android:layout_width="97dp"
+            android:layout_height="24dp"
+            android:layout_marginStart="19dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/blue_background"
             android:fontFamily="@font/poppins_light"
-            android:text="Add to cart"
+            android:text="Открыть"
+            android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="10sp"
             android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvSpecialPrdouctPrice"
-            android:layout_marginTop="10dp"
-            android:textAllCaps="false"
-            />
+            app:layout_constraintStart_toEndOf="@+id/imageSpecialRvItem"
+            app:layout_constraintTop_toBottomOf="@id/tvSpecialPrdouctPrice" />
 
         <LinearLayout
             android:layout_width="23dp"
