--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -78,8 +78,7 @@
             app:layout_constraintTop_toBottomOf="@id/linearTitlePrice"
             app:layout_constraintStart_toStartOf="@id/linearTitlePrice"
             android:textSize="12sp"
-            android:textStyle="bold"
-            android:text="6000₽"/>
+            android:textStyle="bold"/>
 
         <View
             android:id="@+id/topLine"
