--- a/app/src/main/res/layout/cart_product_item.xml
+++ b/app/src/main/res/layout/cart_product_item.xml
@@ -37,7 +37,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/poppins_light"
-            android:text="Chair"
+            android:text="Стул"
             android:textColor="@color/black"
             android:textSize="15sp"
             android:textStyle="bold"
