--- a/app/src/main/res/layout/fragment_billing.xml
+++ b/app/src/main/res/layout/fragment_billing.xml
@@ -36,7 +36,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="25dp"
                     android:fontFamily="@font/poppins_light"
-                    android:text="Billing"
+                    android:text="Ваш заказ"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     app:layout_constraintBottom_toBottomOf="@id/imageCloseBilling"
@@ -50,7 +50,7 @@
             android:id="@+id/tvPaymentMethods"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Payment Methods"
+            android:text="Метод оплаты"
             android:fontFamily="@font/poppins_thin"
             android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@id/toolbarBilling"
@@ -63,7 +63,7 @@
             android:id="@+id/tvPaymentExplanation"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Keline dose not support virtual payments. You can pay when you receive your order."
+            android:text="Пока что доступен только один метод оплаты - при получении."
             android:fontFamily="@font/sf_pro_display"
             app:layout_constraintTop_toBottomOf="@id/tvPaymentMethods"
             app:layout_constraintStart_toStartOf="@id/leftGuideline"
@@ -87,7 +87,7 @@
             android:id="@+id/tvShoppingAddress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Shipping Address"
+            android:text="Выберите адрес доставки"
             android:fontFamily="@font/poppins_thin"
             app:layout_constraintStart_toStartOf="@id/leftGuideline"
             android:textColor="@color/black"
@@ -190,7 +190,7 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="15dp"
                 android:fontFamily="@font/sf_pro_display"
-                android:text="Total"
+                android:text="Итого"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -206,7 +206,7 @@
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="15dp"
                 android:fontFamily="@font/sf_pro_display"
-                android:text="$150"
+                android:text="150₽"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -227,7 +227,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginTop="45dp"
             android:layout_marginBottom="20dp"
-            android:text="Place Order"
+            android:text="Оформить заказ"
             app:spinning_bar_color="@color/white"/>
 
 
