--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -18,60 +19,51 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/searchBar"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/search_box_background">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/poppins_thin"
-                android:paddingStart="20dp"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:singleLine="true"
-                android:text="Search Now"
-                android:textColor="#919394"
-                android:textSize="15sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+            android:layout_weight="1">
 
             <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginEnd="20dp"
-                android:src="@drawable/ic_search"
-                app:layout_constraintTop_toTopOf="parent"
+                android:id="@+id/imageView"
+                android:layout_width="56dp"
+                android:layout_height="55dp"
+                android:scaleType="center"
+                android:src="@mipmap/ic_logoza"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="1dp"
+                android:fontFamily="@font/poppins_thin"
+                android:paddingStart="2dp"
+
+                android:paddingTop="13dp"
+                android:text="DECORTIME"
+                android:textColor="@color/blue_dark"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/imageView"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/accountIcon"
+
+                android:layout_width="43dp"
+                android:layout_height="43dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="4dp"
+                android:src="@color/black"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <View
-            android:layout_width="10dp"
-            android:layout_height="match_parent"/>
 
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_scan"
-            android:background="@drawable/icon_background"
-            android:backgroundTint="@color/g_search_and_icons"
-            android:padding="10dp"/>
-
-        <View
-            android:layout_width="10dp"
-            android:layout_height="match_parent"/>
-
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_microphone"
-            android:background="@drawable/icon_background"
-            android:backgroundTint="@color/g_search_and_icons"
-            android:padding="10dp"/>
 
     </LinearLayout>
 
@@ -80,6 +72,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabRippleColor="@color/white"
+
         app:tabSelectedTextColor="@color/black"
         app:tabMode="scrollable"
         app:tabTextAppearance="@style/tabLayout_text"
