--- a/app/src/main/res/layout/special_rv_item.xml
+++ b/app/src/main/res/layout/special_rv_item.xml
@@ -66,8 +66,10 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/imageSpecialRvItem"
-            app:layout_constraintTop_toBottomOf="@id/tvSpecialPrdouctPrice" />
+            app:layout_constraintTop_toBottomOf="@id/tvSpecialPrdouctPrice"
+            app:layout_constraintVertical_bias="1.0" />
 
         <LinearLayout
             android:layout_width="23dp"
