--- a/app/src/main/res/layout/product_rv_item.xml
+++ b/app/src/main/res/layout/product_rv_item.xml
@@ -35,22 +35,20 @@
                 android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:fontFamily="@font/poppins_light"
                 android:text="Chair"
                 android:textColor="@color/black"
                 android:textSize="14sp"
-                android:textStyle="bold"
-                android:layout_weight="1"/>
+                android:textStyle="bold" />
 
-            <ImageView
+            <ImageButton
                 android:id="@+id/img_favorite"
+                android:background="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="16dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/ic_favorite"
-                app:tint="@color/g_blue_gray200" />
+                android:src="@drawable/baseline"/>
         </LinearLayout>
 
 
