--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -37,7 +37,9 @@
 
     <style name="editText">
         <item name="android:background">@drawable/white_background</item>
+        <item name="android:textColorHint">@color/g_gray700</item>
         <item name="android:gravity">center</item>
+        <item name="color">@color/black</item>
         <item name="singleLine">true</item>
         <item name="android:fontFamily">@font/poppins_light</item>
     </style>
