--- a/app/src/main/res/layout/actitivty_login_register.xml
+++ b/app/src/main/res/layout/actitivty_login_register.xml
@@ -10,5 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:defaultNavHost="true"
+        android:background="@color/white"
         app:navGraph="@navigation/login_register_graph" />
 </FrameLayout>
