--- a/app/src/main/res/layout/best_deals_rv_item.xml
+++ b/app/src/main/res/layout/best_deals_rv_item.xml
@@ -7,7 +7,14 @@
     android:background="@color/g_card_background"
     android:elevation="0dp"
     >
-
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="194dp"
+        android:layout_height="98dp"
+        tools:layout_editor_absoluteX="5dp" />
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="200dp"
         android:layout_height="100dp">
@@ -39,7 +46,7 @@
         <TextView
             android:id="@+id/tv_old_price"
             android:layout_width="78dp"
-            android:layout_height="21dp"
+            android:layout_height="39dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="3dp"
             android:fontFamily="@font/sf_pro_display"
@@ -48,6 +55,8 @@
             android:textSize="16sp"
             app:layout_constraintStart_toEndOf="@+id/img_best_deal"
             app:layout_constraintTop_toBottomOf="@id/tv_deal_product_name" />
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
