--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -53,12 +53,16 @@
             app:layout_constraintTop_toBottomOf="@id/tvLetsLogin" />
 
         <EditText
+
             android:id="@+id/edEmailLogin"
-            style="@style/editText"
+            android:background="@drawable/white_background"
+            android:gravity="center"
             android:layout_width="0dp"
+            style="@style/editText"
             android:layout_height="@dimen/edittextHeight"
             android:layout_marginTop="50dp"
             android:hint="Почта"
+
             android:inputType="textEmailAddress"
             app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
             app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
@@ -71,6 +75,7 @@
             android:layout_height="@dimen/edittextHeight"
             android:layout_marginTop="15dp"
             android:hint="Пароль"
+            android:textColor="@color/black"
             android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
             app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
@@ -104,6 +109,7 @@
             android:layout_marginStart="4dp"
             android:layout_marginTop="20dp"
             android:text="ВКонтакте"
+            android:textColor="@color/g_gray700"
             app:layout_constraintStart_toEndOf="@+id/facebookLogin"
             app:layout_constraintTop_toBottomOf="@+id/buttonLoginLogin" />
 
@@ -113,6 +119,7 @@
             android:layout_height="18dp"
             android:layout_marginTop="20dp"
             android:src="@drawable/google"
+
             app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
             app:layout_constraintTop_toBottomOf="@id/buttonLoginLogin" />
 
@@ -122,6 +129,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="4dp"
             android:text="Google"
+            android:textColor="@color/g_gray700"
             app:layout_constraintEnd_toStartOf="@+id/googleLogin"
             app:layout_constraintTop_toBottomOf="@+id/buttonLoginLogin" />
 
