--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -61,6 +62,7 @@
             android:id="@+id/edFirstNameRegister"
             android:layout_width="0dp"
             android:layout_height="@dimen/edittextHeight"
+            android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
             app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
             app:layout_constraintTop_toBottomOf="@id/tvDoYouHaveAccount"
@@ -72,6 +74,7 @@
             android:id="@+id/edLastNameRegister"
             android:layout_width="0dp"
             android:layout_height="@dimen/edittextHeight"
+            android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
             app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
             app:layout_constraintTop_toBottomOf="@id/edFirstNameRegister"
@@ -83,6 +86,7 @@
             android:id="@+id/edEmailRegister"
             android:layout_width="0dp"
             android:layout_height="@dimen/edittextHeight"
+            android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
             app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
             app:layout_constraintTop_toBottomOf="@id/edLastNameRegister"
@@ -101,58 +105,65 @@
             style="@style/editText"
             android:hint="Пароль"
             android:inputType="textPassword"
+            android:textColor="@color/black"
             android:layout_marginTop="10dp"/>
 
         <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
             android:id="@+id/buttonRegisterRegister"
+            style="@style/blueButtonStyle"
             android:layout_width="0dp"
             android:layout_height="@dimen/mediumButtonHeight"
-            style="@style/blueButtonStyle"
-            app:layout_constraintTop_toBottomOf="@id/edPasswordRegister"
-            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
-            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
             android:layout_marginTop="15dp"
             android:text="Зарегистрироваться"
-            app:spinning_bar_color="@color/white"/>
-
-        <ImageView
-            android:id="@+id/facebookRegister"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="13dp"
-            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
-            app:layout_constraintTop_toBottomOf="@id/buttonRegisterRegister"
-            android:src="@drawable/facebook_login"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Facebook"
-            app:layout_constraintStart_toStartOf="@id/facebookRegister"
-            app:layout_constraintTop_toTopOf="@id/facebookRegister"
-            app:layout_constraintBottom_toBottomOf="@id/facebookRegister"
-            app:layout_constraintEnd_toEndOf="@id/facebookRegister"/>
-
-
-        <ImageView
-            android:id="@+id/googleRegister"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="13dp"
             app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
-            app:layout_constraintTop_toBottomOf="@id/buttonRegisterRegister"
-            android:src="@drawable/google_login"/>
+            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
+            app:layout_constraintTop_toBottomOf="@id/edPasswordRegister"
+            app:spinning_bar_color="@color/white" />
+
+
+        <ImageView
+            android:id="@+id/facebookLogin"
+            android:layout_width="23dp"
+            android:layout_height="19dp"
+            android:layout_marginStart="36dp"
+            android:layout_marginTop="25dp"
+            android:src="@drawable/vk"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/buttonRegisterRegister" />
 
         <TextView
+            android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
             android:text="Google"
-            app:layout_constraintStart_toStartOf="@id/googleRegister"
-            app:layout_constraintTop_toTopOf="@id/googleRegister"
-            app:layout_constraintBottom_toBottomOf="@id/googleRegister"
-            app:layout_constraintEnd_toEndOf="@id/googleRegister"/>
+            android:layout_marginEnd="8dp"
+            android:textColor="@color/g_gray700"
+            app:layout_constraintEnd_toStartOf="@+id/googleLogin"
+            app:layout_constraintTop_toBottomOf="@+id/buttonRegisterRegister" />
 
-    <androidx.constraintlayout.widget.Guideline
+        <ImageView
+            android:id="@+id/googleLogin"
+            android:layout_width="21dp"
+            android:layout_height="18dp"
+            android:layout_marginTop="25dp"
+            android:layout_marginEnd="4dp"
+            android:src="@drawable/google"
+            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
+            app:layout_constraintTop_toBottomOf="@+id/buttonRegisterRegister" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="24dp"
+            android:text="ВКонтакте"
+            android:textColor="@color/g_gray700"
+            app:layout_constraintStart_toEndOf="@+id/facebookLogin"
+            app:layout_constraintTop_toBottomOf="@+id/buttonRegisterRegister" />
+
+        <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineRegisterLeft"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
