--- a/app/src/main/res/layout/special_rv_item.xml
+++ b/app/src/main/res/layout/special_rv_item.xml
@@ -14,6 +14,20 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <RelativeLayout
+            android:id="@+id/relativeLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="230dp"
+            android:layout_height="117dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/special_background" />
+
         <ImageView
             android:id="@+id/imageSpecialRvItem"
             android:layout_width="90dp"
@@ -27,16 +41,16 @@
             android:id="@+id/tvSpecialProductName"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:text="Scotch Premium"
-            app:layout_constraintStart_toEndOf="@id/imageSpecialRvItem"
-            app:layout_constraintTop_toTopOf="@id/imageSpecialRvItem"
-            android:layout_marginTop="7dp"
             android:layout_marginStart="18dp"
+            android:layout_marginTop="7dp"
             android:fontFamily="@font/poppins_thin"
-            android:textStyle="bold"
+            android:maxLines="2"
+            android:text="Scotch Premium"
             android:textColor="@color/black"
             android:textSize="17sp"
-            android:maxLines="2"/>
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@id/imageSpecialRvItem"
+            app:layout_constraintTop_toTopOf="@id/imageSpecialRvItem" />
 
         <TextView
             android:id="@+id/tvSpecialPrdouctPrice"
@@ -47,7 +61,7 @@
             android:textColor="@color/black"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.111"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@id/tvSpecialProductName"
             app:layout_constraintTop_toBottomOf="@id/tvSpecialProductName" />
 
@@ -55,18 +69,17 @@
             android:id="@+id/btn_add_to_cart"
             android:layout_width="97dp"
             android:layout_height="24dp"
-            android:layout_marginStart="19dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/blue_background"
             android:fontFamily="@font/poppins_light"
-            android:text="Открыть"
+            android:text="В корзину"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="10sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.947"
             app:layout_constraintStart_toEndOf="@+id/imageSpecialRvItem"
             app:layout_constraintTop_toBottomOf="@id/tvSpecialPrdouctPrice"
             app:layout_constraintVertical_bias="1.0" />
@@ -74,17 +87,21 @@
         <LinearLayout
             android:layout_width="23dp"
             android:layout_height="23dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             android:background="@drawable/icon_background"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            app:layout_constraintBottom_toTopOf="@+id/btn_add_to_cart"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/tvSpecialProductName"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0">
+
             <ImageView
                 android:layout_width="10dp"
                 android:layout_height="10dp"
-                android:src="@drawable/ic_favorite"
                 android:layout_gravity="center"
                 android:layout_marginTop="7dp"
-                />
+                android:src="@drawable/ic_favorite" />
         </LinearLayout>
 
 
