есть избранные, нет норм дизайна

--- a/app/src/main/res/layout/fragment_main_category.xml
+++ b/app/src/main/res/layout/fragment_main_category.xml
@@ -64,9 +64,19 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tvBestDeals"/>
 
-            <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
+            <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/viewpagerSlider"
+                android:layout_width="380dp"
+                android:layout_height="107dp"
+                android:layout_marginTop="24dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.516"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/rvBestDealsProducts" />
+
+            <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                 android:layout_width="wrap_content"
+                android:id="@+id/slider"
                 android:layout_height="wrap_content"
                 app:dotsColor="@color/g_blue_gray200"
                 app:dotsCornerRadius="8dp"
@@ -76,8 +86,8 @@
                 app:layout_constraintBottom_toTopOf="@+id/tvBestProducts"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rvBestDealsProducts"
-                app:layout_constraintVertical_bias="0.44"
+                app:layout_constraintTop_toBottomOf="@+id/viewpagerSlider"
+                app:layout_constraintVertical_bias="0.816"
                 app:selectedDotColor="@color/g_light_red" />
 
             <androidx.recyclerview.widget.RecyclerView
@@ -85,7 +95,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="24dp"
                 android:layout_marginEnd="15dp"
                 android:overScrollMode="never"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -97,9 +107,9 @@
                 android:id="@+id/tvBestProducts"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
 
-                android:layout_marginTop="56dp"
+
+                android:layout_marginTop="156dp"
                 android:fontFamily="@font/poppins_thin"
                 android:text="Скидки"
                 android:textColor="@color/black"
