--- a/app/src/main/res/navigation/shopping_graph.xml
+++ b/app/src/main/res/navigation/shopping_graph.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_homeFragment_to_productDetailsFragment"
             app:destination="@id/productDetailsFragment" />
+        <argument
+            android:name="imagesOfProducts"
+            app:argType="com.example.kelineyt.data.Product" />
     </fragment>
     <fragment
         android:id="@+id/searchFragment"
